--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,7 @@
       "import/no-named-as-default": 0,
       "import/no-webpack-loader-syntax": 0,
       "import/prefer-default-export": 0,
+      "arrow-parens": 0,
       "import/first": 0,
       "indent": [2, 4, {
         "SwitchCase": 1
