--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
       }],
       "no-restricted-globals": 0,
       "no-shadow": 0,
+      "no-unused-vars": 2,
       "no-script-url": 0,
       "no-mixed-operators": 0,
       "no-nested-ternary": 0,
