--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
+    "mariadb": "^2.1.2",
     "oauth2-server": "^3.0.1",
-    "sequelize": "^4.42.0"
+    "sequelize": "^5.21.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
